kubernetes/applications/peanut/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peanut
  namespace: apps
spec:
  selector:
    matchLabels:
      app: peanut
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: peanut
    spec:
      containers:
        - name: peanut
          image: brandawg93/peanut:6.0.0@sha256:6629dce915da8b313f08b2e73dd2e54b60e7c0f642c21a8ebc37fe0a820bf41e
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pvc-peanut
