kubernetes/applications/peanut/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: peanut
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: peanut
